# Oldies-Backend

./: .gitignore  docker-compose.yml  dockerfile  index.html  manage.py  nginx.conf  pyproject.toml  requirements.txt  setup.sh
.github/workflows/: main.yml
Oldies/: asgi.py  settings.py  urls.py  wsgi.py
Products/: models.py
Users/: admin.py  exceptions.py  models.py  serializers.py  tests.py  urls.py  utils.py  views.py
