[tool.poetry]
name = "oldies-backend"
version = "0.1.0"
description = ""
authors = ["ratchaphon1412 <ratchaphon.h111@gmail.com>"]
readme = "README.md"
packages = [{include = "oldies_backend"}]

[tool.poetry.dependencies]
python = "^3.11"
django-environ = "^0.10.0"
django-filter = "^23.2"
django = "^4.2.2"
djangorestframework-simplejwt = "^5.2.2"
pillow = "^9.5.0"
requests = "^2.31.0"
django-cors-headers = "^4.1.0"
gunicorn = "^20.1.0"
psycopg2-binary = "^2.9.6"
mysqlclient = "^2.2.0"


[tool.poetry.group.dev.dependencies]
django = "^4.2.2"
djangorestframework = "^3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
